--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -30,12 +30,6 @@
                 </div>
             </div>
             <div class="card-footer">
-                <div class="btn-group d-flex">
-                    <button class="btn btn-primary">Like</button>
-                    <button class="btn btn-success">Message</button>
-                </div>
-            </div>
-            <div class="card-footer">
                 <button [disabled]="!editForm.dirty" form="editForm" type="submit" class="btn btn-success btn-block">Save Changes</button>
             </div>
         </div>
@@ -59,25 +53,11 @@
                         <input [(ngModel)]="member.country" type="text" name="country" class="form-control mx-2">
                     </div>
                 </form>
-
-                <h4>Description</h4>
-                <p>{{member.introduction}}</p>
-                <h4>Looking for</h4>
-                <p>{{member.lookingFor}}</p>
+               
             </tab>
-            <tab heading='Interests'>
-                <h4>Interests</h4>
-                <p>{{member.interests}}</p>
-            </tab>
-            <tab heading='Photos'>
-                <ngx-gallery [options]="galleryOptions" [images]="galleryImages" 
-                style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
-            </tab>
-            <tab heading='Messages'>
-                <p>Messages will go here</p>
+            <tab heading='Edit Photos'>
+                <p>Photo edit will go here</p>
             </tab>
         </tabset>
     </div>
-
 </div>
-
