End os section 13.L155

--- a/client/src/app/_forms/text-input/text-input.component.html
+++ b/client/src/app/_forms/text-input/text-input.component.html
@@ -5,7 +5,8 @@
         class="form-control" 
         [formControl]="ngControl.control"
         placeholder={{label}}>
-    <div *ngIf="ngControl.control.errors?.required" class="invalid-feedback">Please enter a {{label}}</div>
+    <div *ngIf="ngControl.control.errors?.required" class="invalid-feedback">
+        Please enter a {{label}}</div>
     <div *ngIf="ngControl.control.errors?.minlength" class="invalid-feedback">
         {{label}} must be at least {{ngControl.control.errors.minlength['requiredLength']}}</div>
     <div *ngIf="ngControl.control.errors?.maxlength" class="invalid-feedback">
