End of section 15

--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -54,7 +54,7 @@
         </tr>
     </table>
 </div>
-<div class="d-flex justify-content-center" *ngIf="pagination && !loading">
+<div class="d-flex justify-content-center" *ngIf="pagination && !loading && messages?.length > 0">
     <pagination 
         [boundaryLinks]="true" 
         [totalItems]="pagination.totalItems"
