--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -12,7 +12,10 @@
                  </li>
                  <li class="nav-item">
                     <a class="nav-link" routerLink='/messages' routerLinkActive='active'>Messages</a>
-                 </li>
+                 </li> 
+                 <li class="nav-item">
+                    <a class="nav-link" routerLink='/admin'routerLinkActive='active' >Admin</a>
+                </li>
             </ng-container>
                 <li class="nav-item">
                     <a class="nav-link" routerLink='/errors'routerLinkActive='active' >Errors</a>
