End of section 18b

--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -18,6 +18,7 @@
 <div class="row" *ngIf="messages?.length === 0">
     <h3>No messages</h3>
 </div>
+
 <div class="row" *ngIf="messages?.length > 0">
     <table class="table table-hover" style="cursor: pointer">
         <tr>
@@ -35,14 +36,14 @@
                 <div *ngIf="container === 'Outbox'">
                     <img 
                         class="img-circle rounded-circle mr-2"
-                        src="{{message.recipientPhotoUrl || './assets.user.png'}}" 
+                        src="{{message.recipientPhotoUrl || './assets/user.png'}}" 
                         alt="{{message.recipientUsername}}">
                     <strong>{{message.recipientUsername | titlecase}}</strong>
                 </div> 
                 <div *ngIf="container !== 'Outbox'">
                     <img 
                         class="img-circle rounded-circle mr-2"
-                        src="{{message.senderPhotoUrl || './assets.user.png'}}" 
+                        src="{{message.senderPhotoUrl || './assets/user.png'}}" 
                         alt="{{message.senderUsername}}">
                     <strong>{{message.senderUsername | titlecase}}</strong>
                 </div> 
@@ -54,7 +55,8 @@
         </tr>
     </table>
 </div>
-<div class="d-flex justify-content-center" *ngIf="pagination && !loading && messages?.length > 0">
+
+<div class="d-flex justify-content-center" *ngIf="pagination && !loading">
     <pagination 
         [boundaryLinks]="true" 
         [totalItems]="pagination.totalItems"
